--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,8 @@
           <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
 
           <h1 id="project_title">RainCheck</h1>
-          <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
+          <h2 id="project_tagline">15-401 Research Project, Spring 2016</h2>
+          <h2 id="project_tagline">Vivek Shankar, Carnegie Mellon University SCS</h2>
 
           {% if site.show_downloads %}
             <section id="downloads">
