--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
           <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
-
+          <img src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAAdIAAAAJDZkZGVmZWVkLWU3NzUtNGZkZS1iZTBlLTNhNWM5OTJmOGMwOA.jpg" alt="Monkey" style="width:67px;height:90px;" align="right">
           <h1 id="project_title">RainCheck</h1>
           <h2 id="project_tagline">15-400 Research Project, Spring 2016</h2>
           <h2 id="project_tagline">Vivek Shankar, Carnegie Mellon University SCS</h2>
