--- a/_sass/jekyll-theme-slate.scss
+++ b/_sass/jekyll-theme-slate.scss
@@ -283,13 +283,13 @@ Full-Width Styles
 }
 
 #header_wrap {
-  background: #FF6347;
+  background: #00BFFF;
   //background: #212121;
-  //background: -moz-linear-gradient(top, #373737, #212121);
-  //background: -webkit-linear-gradient(top, #373737, #212121);
-  //background: -ms-linear-gradient(top, #373737, #212121);
-  //background: -o-linear-gradient(top, #373737, #212121);
-  //background: linear-gradient(top, #373737, #212121);
+  background: -moz-linear-gradient(top, #00BFFF, #212121);
+  background: -webkit-linear-gradient(top, #00BFFF, #212121);
+  background: -ms-linear-gradient(top, #00BFFF, #212121);
+  background: -o-linear-gradient(top, #00BFFF, #212121);
+  background: linear-gradient(top, #00BFFF, #212121);
 }
 
 #header_wrap .inner {
