--- a/_sass/jekyll-theme-slate.scss
+++ b/_sass/jekyll-theme-slate.scss
@@ -45,7 +45,7 @@ Theme Styles
 
 body {
   box-sizing: border-box;
-  color:#373737;
+  color:#00BFFF;
   background: #212121;
   font-size: 16px;
   font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
@@ -229,7 +229,7 @@ hr {
 }
 
 table {
-  border: 1px solid #373737;
+  border: 1px solid #00BFFF;
   margin-bottom: 20px;
   text-align: left;
  }
@@ -237,14 +237,14 @@ table {
 th {
   font-family: 'Lucida Grande', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   padding: 10px;
-  background: #373737;
+  background: #00BFFF;
   color: #fff;
   text-align: center;
  }
 
 td {
   padding: 10px;
-  border: 1px solid #373737;
+  border: 1px solid #00BFFF;
  }
 
 form {
