--- a/_sass/jekyll-theme-slate.scss
+++ b/_sass/jekyll-theme-slate.scss
@@ -45,7 +45,7 @@ Theme Styles
 
 body {
   box-sizing: border-box;
-  color:#00BFFF;
+  color:#373737;
   background: #212121;
   font-size: 16px;
   font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
@@ -229,7 +229,7 @@ hr {
 }
 
 table {
-  border: 1px solid #00BFFF;
+  border: 1px solid #373737;
   margin-bottom: 20px;
   text-align: left;
  }
@@ -244,7 +244,7 @@ th {
 
 td {
   padding: 10px;
-  border: 1px solid #00BFFF;
+  border: 1px solid #373737;
  }
 
 form {
