--- a/_sass/jekyll-theme-slate.scss
+++ b/_sass/jekyll-theme-slate.scss
@@ -237,7 +237,7 @@ table {
 th {
   font-family: 'Lucida Grande', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   padding: 10px;
-  background: #00BFFF;
+  background: #0000FF;
   color: #fff;
   text-align: center;
  }
@@ -283,13 +283,13 @@ Full-Width Styles
 }
 
 #header_wrap {
-  background: #00BFFF;
+  background: #0000FF;
   //background: #212121;
-  background: -moz-linear-gradient(top, #00BFFF, #212121);
-  background: -webkit-linear-gradient(top, #00BFFF, #212121);
-  background: -ms-linear-gradient(top, #00BFFF, #212121);
-  background: -o-linear-gradient(top, #00BFFF, #212121);
-  background: linear-gradient(top, #00BFFF, #212121);
+  background: -moz-linear-gradient(top, #0000FF, #212121);
+  background: -webkit-linear-gradient(top, #0000FF, #212121);
+  background: -ms-linear-gradient(top, #0000FF, #212121);
+  background: -o-linear-gradient(top, #0000FF, #212121);
+  background: linear-gradient(top, #0000FF, #212121);
 }
 
 #header_wrap .inner {
