--- a/_sass/jekyll-theme-slate.scss
+++ b/_sass/jekyll-theme-slate.scss
@@ -363,6 +363,11 @@ Full-Width Styles
 
 #footer_wrap {
   background: #0000FF;
+  background: -moz-linear-gradient(top, #0000FF, #212121);
+  background: -webkit-linear-gradient(top, #0000FF, #212121);
+  background: -ms-linear-gradient(top, #0000FF, #212121);
+  background: -o-linear-gradient(top, #0000FF, #212121);
+  background: linear-gradient(top, #0000FF, #212121);
 }
 
 
