--- a/_sass/jekyll-theme-slate.scss
+++ b/_sass/jekyll-theme-slate.scss
@@ -352,7 +352,8 @@ Full-Width Styles
 }
 
 #main_content_wrap {
-  background: #f2f2f2;
+  background: #0000FF;
+  //background: #f2f2f2;
   border-top: 1px solid #111;
   border-bottom: 1px solid #111;
 }
