--- a/_sass/jekyll-theme-slate.scss
+++ b/_sass/jekyll-theme-slate.scss
@@ -352,7 +352,7 @@ Full-Width Styles
 }
 
 #main_content_wrap {
-  background: #FDF5E6;
+  background: #00BFFF;
   //background: #f2f2f2;
   border-top: 1px solid #111;
   border-bottom: 1px solid #111;
