--- a/_sass/jekyll-theme-slate.scss
+++ b/_sass/jekyll-theme-slate.scss
@@ -354,6 +354,11 @@ Full-Width Styles
 #main_content_wrap {
   background: #00BFFF;
   //background: #f2f2f2;
+  background: -moz-linear-gradient(top, #00BFFF, #000000);
+  background: -webkit-linear-gradient(top, #00BFFF, #000000);
+  background: -ms-linear-gradient(top, #00BFFF, #000000);
+  background: -o-linear-gradient(top, #00BFFF, #000000);
+  background: linear-gradient(top, #00BFFF, #000000);
   border-top: 1px solid #111;
   border-bottom: 1px solid #111;
 }
